--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -22,12 +22,6 @@ jobs:
         distribution: 'temurin'
 
     - name: Build backend with Maven and generate coverage
-      working-directory: ./sneaker-store-back
+      working-directory: /sneaker-store-back
       run: mvn clean install -DskipTests=false
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./sneaker-store-back/target/site/jacoco/jacoco.xml
-        fail_ci_if_error: true
