--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -2,18 +2,17 @@ name: Java CI with Codecov
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up Java
       uses: actions/setup-java@v4
@@ -22,6 +21,12 @@ jobs:
         distribution: 'temurin'
 
     - name: Build backend with Maven and generate coverage
-      working-directory: /sneaker-store-back
+      working-directory: sneaker-store-back
       run: mvn clean install -DskipTests=false
 
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: sneaker-store-back/target/site/jacoco/jacoco.xml
+        fail_ci_if_error: true
