--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -6,13 +6,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up JDK 18
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: 17
       - name: Install dependencies
+        working-directory: ./sneaker-store-back
         run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
       - name: Run tests and collect coverage
+        working-directory: ./sneaker-store-back
         run: mvn -B test
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
