--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -1,22 +1,36 @@
-name: Workflow for Codecov example-java-maven
-on: [push, pull_request]
+name: CI
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
-  run:
+  test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-      - name: Install dependencies
-        working-directory: ./sneaker-store-back
-        run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-      - name: Run tests and collect coverage
-        working-directory: ./sneaker-store-back
-        run: mvn -B test
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v5
+
+      - name: Build Docker image (backend)
+        run: docker build -t sneaker-back-ci ./sneaker-store-back
+
+      - name: Run tests inside container and extract coverage
+        run: |
+          # Run backend container and create coverage inside it
+          docker run --name test-container sneaker-back-ci
+
+          # Copy jacoco XML from container to host
+          docker cp test-container:/app/target/site/jacoco/jacoco.xml coverage.xml
+
+          # Stop & remove container
+          docker rm -f test-container
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.xml
+          fail_ci_if_error: true
